# 2d-game-engine

./: .gitignore  CMakeLists.txt  README.md  setup.sh
assets/shaders/: sprite.frag.sc  sprite.vert.sc  varying.def.sc
assets/test_data/: player_atlas.json  simple_atlas.json
docs/: animation_system_guide.md  input_camera_docs.md  render_queue_system.md  scene_management_guide.md  scene_quick_reference.md
examples/: CMakeLists.txt  input_camera_demo.cpp  render_queue_demo.cpp  scene_example.cpp  test_atlas.cpp
src/: CMakeLists.txt  main.cpp
src/animation/: animation_controller.cpp  animation_controller.h  animation_state_machine.cpp  animation_state_machine.h
src/audio/: audio_engine.cpp  audio_engine.h
src/core/: time_manager.cpp  time_manager.h  transform.cpp  transform.h  types.cpp  types.h
src/input/: input_manager.cpp  input_manager.h
src/math/: rectangle.cpp  rectangle.h  vector.h
src/platform/: file_system.cpp  file_system.h  logging.cpp  logging.h  platform.cpp  platform.h  window.cpp  window.h
src/rendering/: camera.cpp  camera.h  quad_renderer.cpp  quad_renderer.h  render_queue.cpp  render_queue.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite_batch.cpp  sprite_batch.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
src/scene/: scene.h  scene_manager.cpp  scene_manager.h
tests/: CMakeLists.txt
tests/animation/: test_animation_controller.cpp  test_animation_state_machine.cpp
tests/core/: test_color.cpp  test_time_manager.cpp  test_transform.cpp
tests/input/: test_input_manager.cpp
tests/math/: test_rectangle.cpp  test_vector.cpp
tests/platform/: test_file_system.cpp
tests/rendering/: test_camera.cpp  test_render_queue.cpp  test_texture_atlas.cpp
tests/scene/: test_scene_manager.cpp
tools/: create_test_atlas.py
